--- a/codes.html
+++ b/codes.html
@@ -1,10 +1,8 @@
-<html>
-    <head>
+<html><head>
     <meta property="og:site_name" content="s0uth's CS:GO Gambling codes site">
     <meta property="og:title" content="s0uth's CS:GO Gambling codes site">
     <meta property="og:description" content="Site de códigos em sites de CS:GO Gambling">
     <meta property="og:image" content="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/Bh1OLoET.png?raw=true">
-</head>
 <center>     
 <img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/Logo.png?raw=true">
 </center>
@@ -31,7 +29,7 @@ div {
     align-content: center;
 }
         body {
-background-image: url("https://github.com/s0uthogs/s0uthogs.github.io/blob/master/MainMenu_CTlogo.png?raw=true");
+background-image: url("https://github.com/s0uthogs/s0uthogs.github.io/blob/master/quetop.png?raw=true");
 background-size: 100% auto;
 }
         </style>
