--- a/codes.html
+++ b/codes.html
@@ -29,7 +29,7 @@ div {
     align-content: center;
 }
         body {
-background-image: url("https://github.com/s0uthogs/s0uthogs.github.io/blob/master/quetop.png?raw=true");
+background-image: url("http://i.imgur.com/BN9lXF9.jpg");
 background-size: 100% auto;
 }
         </style>
