--- a/codes.html
+++ b/codes.html
@@ -30,7 +30,7 @@ div {
 }
         body {
 background-image: url("http://i.imgur.com/BN9lXF9.jpg");
-background-size: 100% auto;
+background-size: 100% 100%;
 }
         </style>
 <body>
