--- a/codes.html
+++ b/codes.html
@@ -31,6 +31,7 @@ div {
         body {
 background-image: url("http://i.imgur.com/BN9lXF9.jpg");
 background-repeat: no-repeat;
+            background- attachment: fixed;
 }
         </style>
 <body>
