--- a/codes.html
+++ b/codes.html
@@ -1,5 +1,6 @@
 <html><head>
-    <meta property="og:site_name" content="s0uth's CS:GO Gambling codes site">
+<title>s0uth's CS:GO Gambling codes site</title>
+    <meta property="og:site_name" content="s0uth">
     <meta property="og:title" content="s0uth's CS:GO Gambling codes site">
     <meta property="og:description" content="Site de códigos em sites de CS:GO Gambling">
     <meta property="og:image" content="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/Bh1OLoET.png?raw=true">
