--- a/codes.html
+++ b/codes.html
@@ -39,12 +39,12 @@ background-repeat: no-repeat;
     
     <center>
          <br>
-    <a href="hellcase.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/hellcase.png?raw=true" hspace="7"/></a>
-    <a href="csgotower.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgotower.png?raw=true" hspace="7"/></a>
-    <a href="drakemoon.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/drakemoon.png?raw=true" hspace="7"/></a>
+    <a href="https://hellcase.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/hellcase.png?raw=true" hspace="7"/></a>
+    <a href="http://csgotower.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgotower.png?raw=true" hspace="7"/></a>
+    <a href="https://drakemoon.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/drakemoon.png?raw=true" hspace="7"/></a>
     <br>
-    <a href="drakemoon.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/pvpro.png?raw=true" hspace="7"/></a>
-<a href="skinhub.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/skinhub.png?raw=true" hspace="7"/></a>
+    <a href="https://www.pvpro.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/pvpro.png?raw=true" hspace="7"/></a>
+<a href="https://skinhub.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/skinhub.png?raw=true" hspace="7"/></a>
 <a href="https://csgofast.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgofast.png?raw=true" hspace="7"/></a>
 <br>
 <a href="https://csgo-case.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgo-case.png?raw=true" hspace="7"/></a>
@@ -52,7 +52,7 @@ background-repeat: no-repeat;
 <a href="csgobounty.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgobounty.png?raw=true" hspace="7"/></a>
 <br>
 <a href="https://www.csgolive.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgolive.png?raw=true" hspace="7"/></a>
-<a href="csgoroll.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgoroll.png?raw=true" hspace="7"/></a>
+<a href="https://csgoroll.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgoroll.png?raw=true" hspace="7"/></a>
 </center>
     <h1>OOOHHH UÃAAAAHHH ÕOONHHH HÃAAAHHH</h1>
     <h3>caiu no gemidão do CSGO Gambling</h3>
