--- a/codes.html
+++ b/codes.html
@@ -36,7 +36,13 @@ background-repeat: no-repeat;
 }
         </style>
 <body>
-    
+     <script>
+  function play(){
+        alert("É melhor que você esteja de fone.");
+        var snd = new Audio("./2545.mp3");
+        snd.play();
+                 }
+   </script>
     <center>
          <br>
     <a href="https://hellcase.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/hellcase.png?raw=true" hspace="7"/></a>
@@ -54,7 +60,7 @@ background-repeat: no-repeat;
 <a href="https://www.csgolive.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgolive.png?raw=true" hspace="7"/></a>
 <a href="https://csgoroll.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgoroll.png?raw=true" hspace="7"/></a>
 </center>
-    <h1>OOOHHH UÃAAAAHHH ÕOONHHH HÃAAAHHH</h1>
+    <h1 onclick=play()>OOOHHH UÃAAAAHHH ÕOONHHH HÃAAAHHH</h1>
     <h3>caiu no gemidão do CSGO Gambling</h3>
 </body>
 </html>
