--- a/codes.html
+++ b/codes.html
@@ -55,7 +55,7 @@ background-repeat: no-repeat;
 <br>
 <a href="https://csgo-case.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgo-case.png?raw=true" hspace="7"/></a>
 <a href="https://opencsgo.com/pt-BR?ref=EBl5etZ&utm_source=affiliate&utm_medium=partner5&utm_campaign=Braguetta+hellcase.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/opencsgo.png?raw=true" hspace="7"/></a>
-<a href="csgobounty.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgobounty.png?raw=true" hspace="7"/></a>
+<a href="https://csgobounty.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgobounty.png?raw=true" hspace="7"/></a>
 <br>
 <a href="https://www.csgolive.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgolive.png?raw=true" hspace="7"/></a>
 <a href="https://csgoroll.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgoroll.png?raw=true" hspace="7"/></a>
