--- a/codes.html
+++ b/codes.html
@@ -88,7 +88,8 @@ background-repeat: no-repeat;
 <a href="https://csgoroll.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgoroll.png?raw=true" hspace="7"/></a>
  </center>
 <center>
-        <div class="fb-comments" data-href="https://s0uthogs.github.io/codes.html" data-width="500" data-numposts="5"></div>
+        <div class="fb-comments" data-href="https://s0uthogs.github.io/codes.html" data-width="500" data-numposts="5" 	
+data-colorscheme="light"></div>
    </center>
     <h1 onclick=play()>OOOHHH UÃAAAAHHH ÕOONHHH HÃAAAHHH</h1>
     <h3>caiu no gemidão do CSGO Gambling</h3>
