--- a/codes.html
+++ b/codes.html
@@ -89,7 +89,7 @@ background-repeat: no-repeat;
  </center>
 <center>
         <div class="fb-comments" data-href="https://s0uthogs.github.io/codes.html" data-width="500" data-numposts="5" 	
-background-color: #ffff></div>
+background-color: #ffffff></div>
    </center>
     <h1 onclick=play()>OOOHHH UÃAAAAHHH ÕOONHHH HÃAAAHHH</h1>
     <h3>caiu no gemidão do CSGO Gambling</h3>
