--- a/codes.html
+++ b/codes.html
@@ -34,6 +34,9 @@ background-image: url("http://i.imgur.com/BN9lXF9.jpg");
 background-repeat: no-repeat;
             background-attachment: fixed;
 }
+        .fb-background-color {
+background: white;
+}
         </style>
 <body>
     <script>
@@ -87,10 +90,11 @@ background-repeat: no-repeat;
 <a href="https://www.csgolive.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgolive.png?raw=true" hspace="7"/></a>
 <a href="https://csgoroll.com"><img src="https://github.com/s0uthogs/s0uthogs.github.io/blob/master/csgoroll.png?raw=true" hspace="7"/></a>
  </center>
+    <div class="fb-background-color">
 <center>
-        <div class="fb-comments" data-href="https://s0uthogs.github.io/codes.html" data-width="500" data-numposts="5" 	
-background-color: #ffffff></div>
+        <div class="fb-comments" data-href="https://s0uthogs.github.io/codes.html" data-width="500" data-numposts="5"></div>
    </center>
+        </div>
     <h1 onclick=play()>OOOHHH UÃAAAAHHH ÕOONHHH HÃAAAHHH</h1>
     <h3>caiu no gemidão do CSGO Gambling</h3>
 </body>
